--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/google-spreadsheet": "^3.0.0",
+    "@types/node": "^14.0.25",
+    "@types/react": "^16.9.43",
+    "google-spreadsheet": "^3.0.11",
+    "googleapis": "^55.0.0",
     "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-spring": "^8.0.27",
+    "react-use": "^15.3.3",
+    "typescript": "^4.0.0-dev.20200722",
+    "typewriter-effect": "^2.13.1"
   }
 }
