--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@types/google-spreadsheet": "^3.0.0",
-    "@types/node": "^14.0.26",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
     "google-spreadsheet": "^3.0.11",
-    "googleapis": "^56.0.0",
-    "next": "9.4.4",
+    "googleapis": "^58.0.0",
+    "next": "^9.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-spring": "^8.0.27",
