--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "@types/google-spreadsheet": "^3.0.0",
     "@types/node": "^14.0.27",
-    "@types/react": "^16.9.43",
+    "@types/react": "^16.9.44",
     "google-spreadsheet": "^3.0.11",
     "googleapis": "^58.0.0",
     "next": "^9.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-spring": "^8.0.27",
     "react-use": "^15.3.3",
     "typescript": "^4.0.0-dev.20200722",
