--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "next build",
     "start": "next start"
   },
+  "devDependencies": {
+    "@types/puppeteer-core": "^2.0.0",
+    "@vercel/node": "^1.7.4",
+    "puppeteer": "^5.2.1"
+  },
   "dependencies": {
     "@types/google-spreadsheet": "^3.0.0",
     "@types/node": "^14.0.27",
@@ -20,6 +25,8 @@
     "react-spring": "^8.0.27",
     "react-use": "^15.3.3",
     "typescript": "^4.1.0-dev.20200804",
-    "typewriter-effect": "^2.13.1"
+    "typewriter-effect": "^2.13.1",
+    "chrome-aws-lambda": "^5.2.0",
+    "puppeteer-core": "^5.2.1"
   }
 }
