--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "@types/google-spreadsheet": "^3.0.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
+    "chrome-aws-lambda": "^5.2.0",
     "google-spreadsheet": "^3.0.11",
     "googleapis": "^58.0.0",
     "next": "^9.5.1",
+    "next-pwa": "^3.1.1",
+    "puppeteer-core": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-spring": "^8.0.27",
     "react-use": "^15.3.3",
     "typescript": "^4.1.0-dev.20200804",
-    "typewriter-effect": "^2.13.1",
-    "chrome-aws-lambda": "^5.2.0",
-    "puppeteer-core": "^5.2.1"
+    "typewriter-effect": "^2.13.1"
   }
 }
