--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "next": "^9.5.1",
     "next-pwa": "^3.1.1",
     "puppeteer-core": "^5.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "0.0.0-experimental-3d0895557",
+    "react-dom": "0.0.0-experimental-3d0895557",
     "react-feather": "^2.0.8",
     "react-spring": "^8.0.27",
     "react-use": "^15.3.3",
