--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,6 @@ jobs:
           configPath: "lighthouserc.js"
           #          budgetPath: ./budget.json # test performance budgets
           uploadArtifacts: true # save results as an action artifacts
-          temporaryPublicStorage: true # upload lighthouse report to the temporary storage
+          temporaryPublicStorage: false # upload lighthouse report to the temporary storage
+          serverBaseUrl: "https://manuelfyi-lhci.herokuapp.com/app/projects/manuelfyi-lhci"
+          serverToken: "595cbbe4-555c-44cf-89c6-5ffd2c95fd28"
