temporarily disabled failing assertions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,5 @@ jobs:
           uploadArtifacts: true # save results as an action artifacts
           serverBaseUrl: "https://manuelfyi-lhci.herokuapp.com"
           serverToken: "595cbbe4-555c-44cf-89c6-5ffd2c95fd28"
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
