--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   },
   "devDependencies": {
     "@types/puppeteer-core": "^2.0.0",
-    "@vercel/node": "^1.8.1",
-    "puppeteer": "^5.2.1"
+    "@vercel/node": "^1.8.2",
+    "puppeteer": "^5.3.0"
   },
   "dependencies": {
     "@types/google-spreadsheet": "^3.0.1",
-    "@types/node": "^14.6.2",
+    "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
-    "chrome-aws-lambda": "^5.2.1",
+    "chrome-aws-lambda": "^5.3.0",
     "google-spreadsheet": "^3.0.13",
     "googleapis": "^59.0.0",
-    "next": "^9.5.2",
-    "next-pwa": "^3.1.3",
-    "puppeteer-core": "^5.2.1",
+    "next": "^9.5.3",
+    "next-pwa": "^3.1.4",
+    "puppeteer-core": "^5.3.0",
     "react": "0.0.0-experimental-94c0244ba",
     "react-dom": "0.0.0-experimental-94c0244ba",
     "react-feather": "^2.0.8",
     "react-spring": "^8.0.27",
-    "react-use": "^15.3.3",
-    "typescript": "^4.1.0-dev.20200804",
+    "react-use": "^15.3.4",
+    "typescript": "^4.0.3",
     "typewriter-effect": "^2.13.1"
   }
 }
