--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,9 @@ jobs:
           serverBaseUrl: "https://manuelfyi-lhci.herokuapp.com"
           serverToken: ${{secrets.LHCI_SERVER_TOKEN}}
         env:
+          GOOGLE_SHEETS_AUTH: ${{secrets.GOOGLE_SHEETS_AUTH}}
+          GOOGLE_SHEET_CV_ID: ${{secrets.GOOGLE_SHEET_CV_ID}}
+          GOOGLE_SHEET_SKILL_PROFILE_ID: ${{secrets.GOOGLE_SHEET_SKILL_PROFILE_ID}}
           LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
           TEST_SECRET: ${{secrets.TEST_SECRET}}
           TEST2: This is a simple test
