--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^10.0.5",
     "@types/puppeteer-core": "^5.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "@vercel/node": "^1.8.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "@vercel/node": "^1.9.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -27,16 +27,17 @@
   },
   "dependencies": {
     "@types/google-spreadsheet": "^3.0.2",
-    "@types/node": "^14.14.20",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "chrome-aws-lambda": "^5.5.0",
     "google-spreadsheet": "^3.1.15",
     "next": "^10.0.5",
-    "next-pwa": "^5.0.2",
+    "next-pwa": "^5.0.4",
+    "next-seo": "^4.17.0",
     "puppeteer": "^5.5.0",
     "puppeteer-core": "^5.5.0",
-    "react": "0.0.0-experimental-3310209d0",
-    "react-dom": "0.0.0-experimental-3310209d0",
+    "react": "0.0.0-experimental-27659559e",
+    "react-dom": "0.0.0-experimental-27659559e",
     "react-feather": "^2.0.9",
     "react-spring": "^8.0.27",
     "react-use": "^15.3.8",
