--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,22 @@
 {
   "headers": [
     {
-      "source": "/fonts/*.woff2",
+      "source": "/fonts/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
         }
       ]
-    }
-  ],
-  "routes": [
+    },
     {
-      "src": "/api/(.*)",
-      "headers": { "cache-control": "s-maxage=60, stale-while-revalidate" },
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=60, stale-while-revalidate"
+        }
+      ]
     }
   ]
 }
