--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@types/google-spreadsheet": "^3.0.2",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
+    "autoprefixer": "^10.2.4",
     "chrome-aws-lambda": "^7.0.0",
     "google-spreadsheet": "^3.1.15",
     "next": "10.0.5",
     "next-pwa": "^5.0.5",
     "next-seo": "^4.19.0",
+    "next-themes": "0.0.10",
+    "postcss": "^8.2.6",
     "puppeteer": "^7.1.0",
     "puppeteer-core": "^7.1.0",
     "react": "0.0.0-experimental-4e08fb10c",
@@ -40,6 +43,7 @@
     "react-feather": "^2.0.9",
     "react-spring": "^8.0.27",
     "react-use": "^17.1.1",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.2.0-beta",
     "typewriter-effect": "^2.17.0"
   },
