--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "autoprefixer": "^10.2.4",
     "chrome-aws-lambda": "^7.0.0",
     "google-spreadsheet": "^3.1.15",
-    "next": "10.0.5",
-    "next-pwa": "^5.0.5",
+    "next": "^10.0.7",
     "next-seo": "^4.19.0",
     "postcss": "^8.2.6",
     "puppeteer": "^7.1.0",
