target pdf caching issue

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       ]
     },
     {
-      "source": "/api/(.*)",
+      "source": "/api/pdf/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
