--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.1.0",
+    "@next/bundle-analyzer": "^10.0.7",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@types/google-spreadsheet": "^3.0.2",
     "@types/node": "^14.14.31",
@@ -36,7 +37,6 @@
     "next": "^10.0.7",
     "next-seo": "^4.20.0",
     "postcss": "^8.2.6",
-    "puppeteer": "^7.1.0",
     "puppeteer-core": "^7.1.0",
     "react": "0.0.0-experimental-8af27aeed",
     "react-dom": "0.0.0-experimental-8af27aeed",
