--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "lint": "eslint src/ pages/ --ext .jsx,.js,.tsx,.ts --fix"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^10.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@next/eslint-plugin-next": "^10.0.7",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "@vercel/node": "^1.9.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-flowtype": "^5.2.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
@@ -25,21 +25,24 @@
     "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^4.1.0",
+    "@next/bundle-analyzer": "^10.0.7",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "@types/google-spreadsheet": "^3.0.2",
-    "@types/node": "^14.14.28",
+    "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "autoprefixer": "^10.2.4",
     "chrome-aws-lambda": "^7.0.0",
     "google-spreadsheet": "^3.1.15",
-    "next": "10.0.5",
-    "next-pwa": "^5.0.5",
-    "next-seo": "^4.19.0",
+    "next": "^10.0.7",
+    "next-seo": "^4.20.0",
+    "postcss": "^8.2.6",
     "puppeteer": "^7.1.0",
-    "puppeteer-core": "^7.1.0",
-    "react": "0.0.0-experimental-4e08fb10c",
-    "react-dom": "0.0.0-experimental-4e08fb10c",
-    "react-feather": "^2.0.9",
+    "react": "0.0.0-experimental-8af27aeed",
+    "react-dom": "0.0.0-experimental-8af27aeed",
     "react-spring": "^8.0.27",
     "react-use": "^17.1.1",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.2.0-beta",
     "typewriter-effect": "^2.17.0"
   },
