--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "autoprefixer": "^10.2.4",
     "chrome-aws-lambda": "^7.0.0",
     "google-spreadsheet": "^3.1.15",
-    "next": "^10.0.7",
+    "next": "10.0.5",
+    "next-plugin-preact": "^3.0.3",
     "next-seo": "^4.20.0",
     "postcss": "^8.2.6",
+    "preact": "^10.5.12",
+    "preact-render-to-string": "^5.1.12",
     "puppeteer": "^7.1.0",
-    "react": "0.0.0-experimental-8af27aeed",
-    "react-dom": "0.0.0-experimental-8af27aeed",
+    "react": "npm:@preact/compat@0.0.4",
+    "react-dom": "npm:@preact/compat@0.0.4",
     "react-spring": "^8.0.27",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
     "react-use": "^17.1.1",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.2.0-beta",
