--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "tsc": "tsc --noEmit",
-    "lint": "eslint src/ pages/ --ext .jsx,.js,.tsx,.ts --fix"
+    "lint": "eslint components/ hooks/ pages/ --ext .jsx,.js,.tsx,.ts --fix"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^10.0.7",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@next/eslint-plugin-next": "^10.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "@vercel/node": "^1.9.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.21.0",
@@ -26,20 +26,20 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.1.0",
-    "@next/bundle-analyzer": "^10.0.7",
+    "@next/bundle-analyzer": "^10.0.8",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@types/google-spreadsheet": "^3.0.2",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "autoprefixer": "^10.2.4",
+    "@types/node": "^14.14.32",
+    "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
     "chrome-aws-lambda": "^7.0.0",
     "google-spreadsheet": "^3.1.15",
     "next": "10.0.5",
     "next-plugin-preact": "^3.0.3",
     "next-seo": "^4.20.0",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.7",
     "preact": "^10.5.12",
-    "preact-render-to-string": "^5.1.12",
+    "preact-render-to-string": "^5.1.14",
     "puppeteer": "^8.0.0",
     "react": "npm:@preact/compat@0.0.4",
     "react-dom": "npm:@preact/compat@0.0.4",
@@ -47,7 +47,7 @@
     "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
     "react-use": "^17.1.1",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.2",
+    "typescript": "^4.2.3",
     "typewriter-effect": "^2.17.0"
   },
   "eslintConfig": {
