--- a/package.json
+++ b/package.json
@@ -10,43 +10,43 @@
     "lint": "eslint components/ hooks/ pages/ --ext .jsx,.js,.tsx,.ts --fix"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^10.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "@vercel/node": "^1.9.0",
+    "@next/eslint-plugin-next": "^10.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "@vercel/node": "^1.9.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-flowtype": "^5.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.1.0",
-    "@next/bundle-analyzer": "^10.0.8",
+    "@next/bundle-analyzer": "^10.0.9",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@types/google-spreadsheet": "^3.0.2",
-    "@types/node": "^14.14.32",
+    "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
     "chrome-aws-lambda": "^7.0.0",
     "google-spreadsheet": "^3.1.15",
-    "next": "10.0.5",
+    "next": "^10.0.9",
     "next-plugin-preact": "^3.0.3",
-    "next-seo": "^4.20.0",
-    "postcss": "^8.2.7",
-    "preact": "^10.5.12",
-    "preact-render-to-string": "^5.1.14",
+    "next-seo": "^4.23.0",
+    "postcss": "^8.2.8",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.16",
     "puppeteer": "^8.0.0",
     "react": "npm:@preact/compat@0.0.4",
     "react-dom": "npm:@preact/compat@0.0.4",
     "react-spring": "^8.0.27",
     "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
-    "react-use": "^17.1.1",
-    "tailwindcss": "^2.0.3",
+    "react-use": "^17.2.1",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3",
     "typewriter-effect": "^2.17.0"
   },
