--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "build": "next build",
     "start": "next start",
     "tsc": "tsc --noEmit",
-    "lint": "eslint components/ hooks/ pages/ --ext .jsx,.js,.tsx,.ts --fix"
+    "lint": "next lint"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^10.2.3",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "@vercel/node": "^1.11.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.4",
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.4.0",
-    "@next/bundle-analyzer": "^10.2.3",
+    "@next/bundle-analyzer": "^11.0.0",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/google-spreadsheet": "^3.1.2",
     "@types/node": "^15.12.2",
@@ -34,7 +34,7 @@
     "autoprefixer": "^10.2.6",
     "chrome-aws-lambda": "^10.0.0",
     "google-spreadsheet": "^3.1.15",
-    "next": "^10.2.3",
+    "next": "^11.0.0",
     "next-plugin-preact": "^3.0.6",
     "next-seo": "^4.24.0",
     "postcss": "^8.3.4",
@@ -49,45 +49,5 @@
     "tailwindcss": "^2.1.4",
     "typescript": "^4.3.2",
     "typewriter-effect": "^2.18.0"
-  },
-  "eslintConfig": {
-    "plugins": [
-      "@next/next",
-      "simple-import-sort"
-    ],
-    "extends": [
-      "plugin:@typescript-eslint/recommended",
-      "react-app",
-      "plugin:@next/next/recommended"
-    ],
-    "rules": {
-      "simple-import-sort/imports": "error",
-      "jsx-a11y/anchor-is-valid": [
-        "error",
-        {
-          "components": [
-            "Link"
-          ],
-          "specialLink": [
-            "hrefLeft",
-            "hrefRight"
-          ],
-          "aspects": [
-            "invalidHref",
-            "preferButton"
-          ]
-        }
-      ],
-      "@typescript-eslint/explicit-module-boundary-types": "off"
-    },
-    "overrides": [
-      {
-        "files": "next.config.js",
-        "rules": {
-          "simple-import-sort/imports": "off",
-          "@typescript-eslint/no-var-requires": "off"
-        }
-      }
-    ]
   }
 }
