updated aws & pupetteer

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "autoprefixer": "^10.2.6",
-    "chrome-aws-lambda": "^10.0.0",
+    "chrome-aws-lambda": "10.1.0",
     "google-spreadsheet": "^3.1.15",
     "next": "^11.0.0",
     "next-plugin-preact": "^3.0.6",
@@ -40,7 +40,7 @@
     "postcss": "^8.3.4",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
-    "puppeteer": "^10.0.0",
+    "puppeteer-core": "^19.4.1",
     "react": "npm:@preact/compat@0.0.4",
     "react-dom": "npm:@preact/compat@0.0.4",
     "react-spring": "^8.0.27",
