--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "tsc": "tsc --noEmit",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{js,ts,tsx,md}\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.47.0",
@@ -22,7 +23,9 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0"
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12"
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "6.2.0",
@@ -46,5 +49,12 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "typewriter-effect": "^2.19.0"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "semi": false,
+    "trailingComma": "all",
+    "singleQuote": true,
+    "useTabs": true
   }
 }
