--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@icons-pack/react-simple-icons": "6.2.0",
     "@next/bundle-analyzer": "^13.0.7",
     "@next/font": "^13.1.1",
+    "@react-pdf/renderer": "^3.0.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/google-spreadsheet": "^3.3.0",
     "@types/node": "^18.11.17",
