--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier-plugin-tailwindcss": "^0.1.12"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@icons-pack/react-simple-icons": "6.2.0",
     "@next/bundle-analyzer": "^13.0.7",
     "@next/font": "^13.1.1",
@@ -45,6 +46,7 @@
     "puppeteer-core": "^19.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-spring": "^9.6.1",
     "react-use": "^17.4.0",
     "tailwindcss": "^3.2.4",
