--- a/package.json
+++ b/package.json
@@ -1,53 +1,61 @@
 {
-  "name": "manuel-dugue",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "tsc": "tsc --noEmit",
-    "lint": "next lint"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "@vercel/node": "^1.11.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.28.0",
-    "eslint-config-next": "^11.0.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0"
-  },
-  "dependencies": {
-    "@icons-pack/react-simple-icons": "^4.4.0",
-    "@next/bundle-analyzer": "^11.0.0",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@types/google-spreadsheet": "^3.1.2",
-    "@types/node": "^15.12.2",
-    "@types/react": "^17.0.11",
-    "autoprefixer": "^10.2.6",
-    "chrome-aws-lambda": "^10.0.0",
-    "google-spreadsheet": "^3.1.15",
-    "next": "^11.0.0",
-    "next-plugin-preact": "^3.0.6",
-    "next-seo": "^4.24.0",
-    "postcss": "^8.3.4",
-    "preact": "^10.5.13",
-    "preact-render-to-string": "^5.1.19",
-    "puppeteer": "^10.0.0",
-    "react": "npm:@preact/compat@0.0.4",
-    "react-dom": "npm:@preact/compat@0.0.4",
-    "react-spring": "^8.0.27",
-    "react-ssr-prepass": "npm:preact-ssr-prepass@^1.1.3",
-    "react-use": "^17.2.4",
-    "tailwindcss": "^2.1.4",
-    "typescript": "^4.3.2",
-    "typewriter-effect": "^2.18.0"
-  }
+	"name": "manuel-dugue",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --show-all",
+		"build": "next build",
+		"start": "next start",
+		"tsc": "tsc --noEmit",
+		"lint": "next lint",
+		"format": "prettier --write \"**/*.{js,ts,tsx,md}\""
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.48.0",
+		"@typescript-eslint/parser": "^5.48.0",
+		"@vercel/node": "^2.8.1",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^8.31.0",
+		"eslint-config-next": "^13.0.7",
+		"eslint-config-react-app": "^7.0.1",
+		"eslint-plugin-flowtype": "^8.0.3",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-simple-import-sort": "^8.0.0",
+		"prettier": "^2.7.1",
+		"prettier-plugin-tailwindcss": "^0.2.1"
+	},
+	"dependencies": {
+		"@heroicons/react": "^2.0.13",
+		"@icons-pack/react-simple-icons": "6.2.0",
+		"@next/bundle-analyzer": "^13.0.7",
+		"@next/font": "^13.1.1",
+		"@react-pdf/renderer": "^3.0.2",
+		"@tailwindcss/line-clamp": "^0.4.2",
+		"@types/google-spreadsheet": "^3.3.0",
+		"@types/node": "^18.11.17",
+		"@types/react": "^18.0.26",
+		"autoprefixer": "^10.4.13",
+		"google-spreadsheet": "^3.3.0",
+		"next": "^13.0.7",
+		"next-seo": "^5.15.0",
+		"postcss": "^8.4.20",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-error-boundary": "^3.1.4",
+		"react-spring": "^9.6.1",
+		"react-use": "^17.4.0",
+		"tailwindcss": "^3.2.4",
+		"typescript": "^4.9.4",
+		"typewriter-effect": "^2.19.0"
+	},
+	"prettier": {
+		"arrowParens": "always",
+		"semi": false,
+		"trailingComma": "all",
+		"singleQuote": true,
+		"useTabs": true
+	}
 }
