--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/node": "^18.11.17",
 		"@types/react": "^18.0.26",
 		"autoprefixer": "^10.4.13",
+		"framer-motion": "^8.1.5",
 		"google-spreadsheet": "^3.3.0",
 		"next": "^13.0.7",
 		"next-seo": "^5.15.0",
