--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"format": "prettier --write \"**/*.{js,ts,tsx,md}\""
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.8",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
-		"@vercel/node": "^2.8.1",
+		"@vercel/node": "^2.8.3",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^8.31.0",
 		"eslint-config-next": "^13.0.7",
