--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --show-all",
+		"dev": "next dev --show-all --turbo",
 		"build": "next build",
 		"start": "next start",
 		"tsc": "tsc --noEmit",
@@ -11,46 +11,46 @@
 		"format": "prettier --write \"**/*.{js,ts,tsx,md}\""
 	},
 	"devDependencies": {
-		"@tailwindcss/typography": "^0.5.8",
-		"@typescript-eslint/eslint-plugin": "^5.48.0",
-		"@typescript-eslint/parser": "^5.48.0",
-		"@vercel/node": "^2.8.4",
+		"@tailwindcss/typography": "^0.5.9",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
+		"@vercel/node": "^2.9.12",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^8.31.0",
-		"eslint-config-next": "^13.0.7",
+		"eslint": "^8.35.0",
+		"eslint-config-next": "^13.2.3",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-simple-import-sort": "^8.0.0",
-		"prettier": "^2.8.2",
-		"prettier-plugin-tailwindcss": "^0.2.1"
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"prettier": "^2.8.4",
+		"prettier-plugin-tailwindcss": "^0.2.4"
 	},
 	"dependencies": {
-		"@heroicons/react": "^2.0.13",
-		"@icons-pack/react-simple-icons": "6.2.0",
-		"@next/bundle-analyzer": "^13.0.7",
-		"@next/font": "^13.1.1",
-		"@react-pdf/renderer": "^3.0.2",
+		"@heroicons/react": "^2.0.16",
+		"@icons-pack/react-simple-icons": "7.1.0",
+		"@next/bundle-analyzer": "^13.2.3",
+		"@next/font": "^13.2.3",
+		"@react-pdf/renderer": "3.0.2",
 		"@tailwindcss/line-clamp": "^0.4.2",
-		"@types/google-spreadsheet": "^3.3.0",
-		"@types/node": "^18.11.17",
-		"@types/react": "^18.0.26",
+		"@types/google-spreadsheet": "^3.3.1",
+		"@types/node": "^18.14.6",
+		"@types/react": "^18.0.28",
 		"autoprefixer": "^10.4.13",
 		"framer-motion": "^8.3.3",
 		"google-spreadsheet": "^3.3.0",
-		"next": "^13.0.7",
+		"next": "^13.2.3",
 		"next-seo": "^5.15.0",
 		"postcss": "^8.4.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^3.1.4",
-		"react-spring": "^9.6.1",
+		"react-spring": "^9.7.1",
 		"react-use": "^17.4.0",
-		"tailwindcss": "^3.2.4",
-		"typescript": "^4.9.4",
+		"tailwindcss": "^3.2.7",
+		"typescript": "^4.9.5",
 		"typewriter-effect": "^2.19.0"
 	},
 	"prettier": {
