--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --show-all --turbo",
+		"dev": "next dev --show-all",
 		"build": "next build",
 		"start": "next start",
 		"tsc": "tsc --noEmit",
