--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
-		"@typescript-eslint/eslint-plugin": "^5.54.1",
-		"@typescript-eslint/parser": "^5.54.1",
+		"@typescript-eslint/eslint-plugin": "^5.55.0",
+		"@typescript-eslint/parser": "^5.55.0",
 		"@vercel/node": "^2.9.12",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^8.35.0",
-		"eslint-config-next": "^13.2.3",
+		"eslint": "^8.36.0",
+		"eslint-config-next": "^13.2.4",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.27.5",
@@ -31,23 +31,25 @@
 	"dependencies": {
 		"@heroicons/react": "^2.0.16",
 		"@icons-pack/react-simple-icons": "7.1.0",
-		"@next/bundle-analyzer": "^13.2.3",
+		"@next/bundle-analyzer": "^13.2.4",
 		"@react-pdf/renderer": "3.0.2",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@types/google-spreadsheet": "^3.3.1",
-		"@types/node": "^18.14.6",
+		"@types/node": "^18.15.3",
 		"@types/react": "^18.0.28",
-		"autoprefixer": "^10.4.13",
+		"autoprefixer": "^10.4.14",
 		"framer-motion": "^8.3.3",
 		"google-spreadsheet": "^3.3.0",
-		"next": "^13.2.3",
+		"next": "^13.2.4",
 		"next-seo": "^5.15.0",
+		"openai": "^3.2.1",
 		"postcss": "^8.4.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^3.1.4",
 		"react-spring": "^9.7.1",
 		"react-use": "^17.4.0",
+		"server-only": "^0.0.1",
 		"tailwindcss": "^3.2.7",
 		"typescript": "^4.9.5",
 		"typewriter-effect": "^2.19.0"
