--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"react-error-boundary": "^4.0.3",
 		"react-spring": "^9.7.1",
 		"react-use": "^17.4.0",
+		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.1",
 		"typescript": "^5.0.4",
 		"typewriter-effect": "^2.19.0"
