updated to @react-spring/web

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@icons-pack/react-simple-icons": "7.2.0",
 		"@next/bundle-analyzer": "^13.3.0",
 		"@react-pdf/renderer": "3.0.2",
+		"@react-spring/web": "^9.7.2",
 		"@types/google-spreadsheet": "^3.3.1",
 		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.35",
@@ -45,7 +46,6 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.3",
-		"react-spring": "^9.7.1",
 		"react-use": "^17.4.0",
 		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.1",
