--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --show-all",
+		"dev": "next dev --show-all --turbo",
 		"build": "next build",
 		"start": "next start",
 		"tsc": "tsc --noEmit",
@@ -12,12 +12,12 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
-		"@typescript-eslint/eslint-plugin": "^5.59.5",
-		"@typescript-eslint/parser": "^5.59.5",
-		"@vercel/node": "^2.14.1",
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
+		"@vercel/node": "^2.15.2",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^8.40.0",
-		"eslint-config-next": "^13.4.1",
+		"eslint": "^8.43.0",
+		"eslint-config-next": "^13.4.7",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.27.5",
@@ -26,31 +26,31 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.2.8"
+		"prettier-plugin-tailwindcss": "^0.3.0"
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.0.18",
-		"@icons-pack/react-simple-icons": "7.2.0",
-		"@next/bundle-analyzer": "^13.4.1",
-		"@react-pdf/renderer": "3.1.9",
+		"@icons-pack/react-simple-icons": "8.0.1",
+		"@next/bundle-analyzer": "^13.4.7",
+		"@react-pdf/renderer": "3.1.12",
 		"@react-spring/web": "^9.7.2",
-		"@types/google-spreadsheet": "^3.3.1",
-		"@types/node": "^20.1.2",
-		"@types/react": "^18.2.6",
+		"@types/google-spreadsheet": "^3.3.2",
+		"@types/node": "^20.3.1",
+		"@types/react": "^18.2.13",
 		"autoprefixer": "^10.4.14",
-		"framer-motion": "^10.12.9",
+		"framer-motion": "^10.12.16",
 		"google-spreadsheet": "^3.3.0",
-		"next": "^13.4.1",
-		"next-seo": "^6.0.0",
-		"postcss": "^8.4.23",
+		"next": "^13.4.7",
+		"next-seo": "^6.1.0",
+		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-error-boundary": "^4.0.4",
+		"react-error-boundary": "^4.0.10",
 		"react-use": "^17.4.0",
 		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^5.0.4",
-		"typewriter-effect": "^2.19.0"
+		"typescript": "^5.1.3",
+		"typewriter-effect": "^2.20.1"
 	},
 	"prettier": {
 		"arrowParens": "always",
