--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@types/google-spreadsheet": "^3.3.2",
 		"@types/node": "^20.3.1",
 		"@types/react": "^18.2.13",
+		"@vercel/kv": "^0.2.2",
 		"autoprefixer": "^10.4.14",
 		"framer-motion": "^10.12.16",
 		"google-spreadsheet": "^3.3.0",
