--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/react-dom": "^18.2.6",
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"@typescript-eslint/parser": "^5.60.0",
 		"@vercel/node": "^2.15.2",
@@ -33,16 +34,19 @@
 		"@icons-pack/react-simple-icons": "8.0.1",
 		"@next/bundle-analyzer": "^13.4.7",
 		"@react-pdf/renderer": "3.1.12",
-		"@react-spring/web": "^9.7.2",
+		"@react-spring/web": "^9.7.3",
 		"@types/google-spreadsheet": "^3.3.2",
 		"@types/node": "^20.3.1",
-		"@types/react": "^18.2.13",
+		"@types/react": "^18.2.14",
 		"@vercel/kv": "^0.2.2",
+		"ai": "^2.1.8",
 		"autoprefixer": "^10.4.14",
-		"framer-motion": "^10.12.16",
+		"framer-motion": "^10.12.17",
 		"google-spreadsheet": "^3.3.0",
 		"next": "^13.4.7",
 		"next-seo": "^6.1.0",
+		"openai": "^3.3.0",
+		"openai-edge": "^1.1.0",
 		"postcss": "^8.4.24",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -51,7 +55,8 @@
 		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.1.3",
-		"typewriter-effect": "^2.20.1"
+		"typewriter-effect": "^2.20.1",
+		"xss": "^1.0.14"
 	},
 	"prettier": {
 		"arrowParens": "always",
