added gql codegen

--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
 		"start": "next start",
 		"tsc": "tsc --noEmit",
 		"lint": "next lint",
-		"format": "prettier --write \"**/*.{js,ts,tsx,md}\""
+		"format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+		"generate": "graphql-codegen",
+		"prestart": "pnpm generate",
+		"predev": "pnpm generate"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^4.0.1",
+		"@graphql-codegen/client-preset": "^4.0.1",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/react-dom": "^18.2.6",
 		"@typescript-eslint/eslint-plugin": "^5.60.1",
 		"@typescript-eslint/parser": "^5.60.1",
 		"@vercel/node": "^2.15.3",
 		"babel-eslint": "^10.1.0",
+		"dotenv": "^16.3.1",
 		"eslint": "^8.43.0",
 		"eslint-config-next": "^13.4.7",
 		"eslint-config-react-app": "^7.0.1",
@@ -27,7 +33,8 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.3.0"
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"typescript": "^5.1.6"
 	},
 	"dependencies": {
 		"@contentful/rich-text-react-renderer": "^15.17.0",
@@ -44,6 +51,8 @@
 		"autoprefixer": "^10.4.14",
 		"framer-motion": "^10.12.18",
 		"google-spreadsheet": "^3.3.0",
+		"graphql": "^16.7.1",
+		"graphql-request": "^6.1.0",
 		"next": "^13.4.7",
 		"next-seo": "^6.1.0",
 		"openai": "^3.3.0",
@@ -55,7 +64,6 @@
 		"react-use": "^17.4.0",
 		"schema-dts": "^1.1.2",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^5.1.6",
 		"typewriter-effect": "^2.20.1",
 		"xss": "^1.0.14"
 	},
