--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@heroicons/react": "^2.0.18",
 		"@icons-pack/react-simple-icons": "8.0.1",
 		"@next/bundle-analyzer": "^13.4.9",
+		"@radix-ui/react-tooltip": "^1.0.6",
 		"@react-pdf/renderer": "3.1.12",
 		"@react-spring/web": "^9.7.3",
 		"@types/node": "^20.4.1",
