updated to next 14.0.1 also most other dependencies

--- a/package.json
+++ b/package.json
@@ -1,83 +1,82 @@
 {
-  "name": "manuel-dugue",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --show-all",
-    "build": "next build",
-    "start": "next start",
-    "tsc": "tsc --noEmit",
-    "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
-    "generate": "graphql-codegen",
-    "prestart": "bun generate",
-    "predev": "bun generate"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/client-preset": "^4.1.0",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/negotiator": "^0.6.1",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "@vercel/node": "^3.0.5",
-    "babel-eslint": "^10.1.0",
-    "bun-types": "^1.0.2",
-    "dotenv": "^16.3.1",
-    "encoding": "^0.1.13",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.5.1",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@contentful/rich-text-html-renderer": "^16.1.2",
-    "@contentful/rich-text-react-renderer": "^15.17.2",
-    "@contentful/rich-text-types": "^16.3.0",
-    "@formatjs/intl-localematcher": "^0.4.2",
-    "@heroicons/react": "^2.0.18",
-    "@icons-pack/react-simple-icons": "9.0.0",
-    "@next/bundle-analyzer": "^13.5.1",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "@react-pdf/renderer": "3.1.12",
-    "@react-spring/web": "^9.7.3",
-    "@types/node": "^20.6.3",
-    "@types/react": "^18.2.22",
-    "@vercel/kv": "^0.2.3",
-    "ai": "^2.2.13",
-    "autoprefixer": "^10.4.15",
-    "framer-motion": "^10.16.4",
-    "graphql": "^16.8.1",
-    "graphql-request": "^6.1.0",
-    "negotiator": "^0.6.3",
-    "next": "^13.5.1",
-    "next-seo": "^6.1.0",
-    "openai": "^4.8.0",
-    "postcss": "^8.4.30",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-use": "^17.4.0",
-    "schema-dts": "^1.1.2",
-    "tailwindcss": "^3.3.3",
-    "typewriter-effect": "^2.21.0",
-    "xss": "^1.0.14"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "semi": false,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "useTabs": true
-  }
+	"name": "manuel-dugue",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"dev:turbo": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"tsc": "tsc --noEmit",
+		"lint": "next lint",
+		"format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+		"generate": "graphql-codegen"
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "^5.0.0",
+		"@graphql-codegen/client-preset": "^4.1.0",
+		"@graphql-typed-document-node/core": "^3.2.0",
+		"@tailwindcss/typography": "^0.5.10",
+		"@types/negotiator": "^0.6.2",
+		"@types/react-dom": "^18.2.14",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
+		"@vercel/node": "^3.0.7",
+		"babel-eslint": "^10.1.0",
+		"bun-types": "^1.0.9",
+		"dotenv": "^16.3.1",
+		"encoding": "^0.1.13",
+		"eslint": "^8.53.0",
+		"eslint-config-next": "^14.0.1",
+		"eslint-config-react-app": "^7.0.1",
+		"eslint-plugin-flowtype": "^8.0.3",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.6",
+		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"@contentful/rich-text-html-renderer": "^16.3.0",
+		"@contentful/rich-text-react-renderer": "^15.19.0",
+		"@contentful/rich-text-types": "^16.3.0",
+		"@formatjs/intl-localematcher": "^0.5.0",
+		"@heroicons/react": "^2.0.18",
+		"@icons-pack/react-simple-icons": "9.1.0",
+		"@next/bundle-analyzer": "^14.0.1",
+		"@radix-ui/react-tooltip": "^1.0.7",
+		"@react-pdf/renderer": "3.1.14",
+		"@react-spring/web": "^9.7.3",
+		"@types/node": "^20.8.10",
+		"@types/react": "^18.2.36",
+		"@vercel/kv": "^0.2.4",
+		"ai": "2.2.13",
+		"autoprefixer": "^10.4.16",
+		"framer-motion": "^10.16.4",
+		"graphql": "^16.8.1",
+		"graphql-request": "^6.1.0",
+		"negotiator": "^0.6.3",
+		"next": "14.0.1",
+		"next-seo": "^6.4.0",
+		"openai": "4.8.0",
+		"postcss": "^8.4.31",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.11",
+		"react-use": "^17.4.0",
+		"schema-dts": "^1.1.2",
+		"tailwindcss": "^3.3.5",
+		"typewriter-effect": "^2.21.0",
+		"xss": "^1.0.14"
+	},
+	"prettier": {
+		"arrowParens": "always",
+		"semi": false,
+		"trailingComma": "all",
+		"singleQuote": true,
+		"useTabs": true
+	}
 }
