--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"baseUrl": ".",
+		"paths": {
+      "@/*": ["./app/*"]
+    },
 		"plugins": [
 			{
 				"name": "next"
