--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: check types
-        run: bun tsc
+        run: bun tsc --noEmit
 
       - name: linting
         run: bun lint
