--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"dev:turbo": "next dev --turbo",
-		"build": "next build",
+		"dev": "next dev --turbo",
+		"build": "next build --turbopack",
 		"start": "next start",
 		"tsc": "tsc --noEmit",
 		"lint": "next lint",
@@ -14,30 +13,31 @@
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.5",
-		"@graphql-codegen/client-preset": "^4.7.0",
+		"@graphql-codegen/client-preset": "^4.8.0",
 		"@graphql-typed-document-node/core": "^3.2.0",
-		"@tailwindcss/typography": "^0.5.13",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/negotiator": "^0.6.3",
-		"@types/react-dom": "^19.0.4",
-		"@typescript-eslint/eslint-plugin": "^8.27.0",
-		"@typescript-eslint/parser": "^8.27.0",
+		"@types/react-dom": "^19.1.2",
+		"@typescript-eslint/eslint-plugin": "^8.31.0",
+		"@typescript-eslint/parser": "^8.31.0",
 		"@vercel/node": "^5.1.14",
 		"babel-eslint": "^10.1.0",
-		"bun-types": "^1.2.5",
-		"dotenv": "^16.4.7",
+		"babel-plugin-react-compiler": "^19.1.0-rc.1",
+		"bun-types": "^1.2.10",
+		"dotenv": "^16.5.0",
 		"encoding": "^0.1.13",
-		"eslint": "^8.54.0",
-		"eslint-config-next": "^15.2.3",
+		"eslint": "^9.25.1",
+		"eslint-config-next": "^15.3.1",
 		"eslint-config-react-app": "^7.0.1",
 		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-react": "^7.37.4",
-		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "6.0.0-rc.1",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"typescript": "^5.8.2"
+		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@contentful/rich-text-html-renderer": "^17.0.0",
@@ -45,30 +45,30 @@
 		"@contentful/rich-text-types": "^17.0.0",
 		"@formatjs/intl-localematcher": "^0.6.1",
 		"@heroicons/react": "^2.2.0",
-		"@next/bundle-analyzer": "^15.2.3",
-		"@radix-ui/react-tooltip": "^1.1.8",
+		"@next/bundle-analyzer": "^15.3.1",
+		"@radix-ui/react-tooltip": "^1.2.4",
 		"@react-pdf/renderer": "4.3.0",
-		"@react-spring/web": "9.7.3",
+		"@react-spring/web": "9.7.5",
 		"@remixicon/react": "^4.6.0",
-		"@types/node": "^22.13.12",
-		"@types/react": "^19.0.12",
+		"@tailwindcss/postcss": "^4.1.4",
+		"@types/node": "^22.15.2",
+		"@types/react": "^19.1.2",
 		"@vercel/kv": "^3.0.0",
 		"ai": "3.1.12",
-		"autoprefixer": "^10.4.21",
-		"framer-motion": "^12.5.0",
+		"framer-motion": "^12.9.1",
 		"graphql": "^16.10.0",
 		"graphql-request": "^7.1.2",
 		"negotiator": "^1.0.0",
-		"next": "15.2.3",
+		"next": "15.3.1",
 		"next-seo": "^6.6.0",
-		"openai": "4.47.1",
+		"openai": "4.96.0",
 		"postcss": "^8.5.3",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"react-error-boundary": "^5.0.0",
 		"react-use": "^17.6.0",
 		"schema-dts": "^1.1.5",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^4.1.4",
 		"typewriter-effect": "^2.21.0",
 		"xss": "^1.0.15"
 	},
