fixing lint rule

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "tsc": "tsc --noEmit",
     "lint": "next lint",
