CamelCase to kebab-case, ident style tab

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,4 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
-  "extends": ["ultracite"]
+  "extends": ["ultracite"],
+  "formatter": { "indentStyle": "tab" }
 }
