--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "tsc": "tsc --noEmit",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+    "format": "biome format --write",
     "generate": "graphql-codegen"
   },
   "devDependencies": {
@@ -36,8 +36,6 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3",
     "ultracite": "5.0.32"
   },
@@ -73,12 +71,5 @@
     "tailwindcss": "^4.1.11",
     "typewriter-effect": "^2.22.0",
     "xss": "^1.0.15"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "semi": false,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "useTabs": true
   }
 }
