--- a/package.json
+++ b/package.json
@@ -3,73 +3,75 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "tsc": "tsc --noEmit",
-    "lint": "next lint",
+    "tsc": "next typegen && tsc --noEmit",
+    "lint": "bun lint:eslint && bun lint:biome",
+    "lint:eslint": "eslint .",
+    "lint:biome": "biome check",
     "format": "biome format --write",
     "generate": "graphql-codegen"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.4",
-    "@graphql-codegen/cli": "^5.0.7",
-    "@graphql-codegen/client-preset": "^4.8.3",
+    "@biomejs/biome": "2.3.6",
+    "@graphql-codegen/cli": "^6.0.2",
+    "@graphql-codegen/client-preset": "^5.1.3",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/bun": "1.3.2",
     "@types/negotiator": "^0.6.4",
-    "@types/react-dom": "^19.1.7",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "@vercel/node": "^5.3.11",
+    "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vercel/node": "^5.5.6",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-react-compiler": "^19.1.0-rc.2",
-    "bun-types": "^1.2.20",
-    "dotenv": "^17.2.1",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "bun-types": "^1.3.2",
+    "dotenv": "^17.2.3",
     "encoding": "^0.1.13",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "^15.4.6",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.3",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "6.0.0-rc.1",
+    "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript": "^5.9.2",
-    "ultracite": "5.1.2",
-    "@types/bun": "latest"
+    "typescript": "^5.9.3",
+    "ultracite": "6.3.4"
   },
   "dependencies": {
-    "@contentful/rich-text-html-renderer": "^17.1.0",
-    "@contentful/rich-text-react-renderer": "^16.1.0",
-    "@contentful/rich-text-types": "^17.1.0",
-    "@formatjs/intl-localematcher": "^0.6.1",
+    "@contentful/rich-text-html-renderer": "^17.1.6",
+    "@contentful/rich-text-react-renderer": "^16.1.6",
+    "@contentful/rich-text-types": "^17.2.5",
+    "@formatjs/intl-localematcher": "^0.6.2",
     "@heroicons/react": "^2.2.0",
-    "@next/bundle-analyzer": "^15.4.6",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-pdf/renderer": "4.3.0",
+    "@next/bundle-analyzer": "16.0.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-pdf/renderer": "4.3.1",
     "@react-spring/web": "9.7.5",
-    "@remixicon/react": "^4.6.0",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^24.2.1",
-    "@types/react": "^19.1.9",
+    "@remixicon/react": "^4.7.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24.10.1",
+    "@types/react": "19.2.6",
     "@vercel/kv": "^3.0.0",
     "ai": "3.1.12",
-    "framer-motion": "^12.23.12",
-    "graphql": "^16.11.0",
-    "graphql-request": "^7.2.0",
+    "framer-motion": "^12.23.24",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.3.4",
     "negotiator": "^1.0.0",
-    "next": "15.4.6",
-    "next-seo": "^6.8.0",
+    "next": "16.0.3",
+    "next-seo": "^7.0.1",
     "openai": "5.12.2",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-use": "^17.6.0",
     "schema-dts": "^1.1.5",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.17",
     "typewriter-effect": "^2.22.0",
     "xss": "^1.0.15"
   }
